<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">


    <TextView
        android:id="@+id/signupCreatePrompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signupCreatePrompt"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/signupUsernamePrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signupUsernamePrompt"/>

        <EditText
            android:id="@+id/signupUsernameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/signupUsernameHint"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/signupPasswordPrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signupPasswordPrompt"/>

        <EditText
            android:id="@+id/signupPasswordEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/signupPasswordHint"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/signupPasswordConfirmPrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signupPasswordConfirmPrompt"/>

        <EditText
            android:id="@+id/signupPasswordConfirmEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/signupPasswordConfirmHint"/>
    </LinearLayout>

    <Button
        android:id="@+id/signupSignupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signupRegisterButtonText"
        android:onClick="registerAccount"/>

    <Button
        android:id="@+id/signupCancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signupCancelButtonText"
        android:onClick="backToLogin"/>

    <TextView
        android:id="@+id/signupResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""/>

</LinearLayout>